--- a/static/calendly.html
+++ b/static/calendly.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<link rel="preload" href="https://webhooks.mongodb-realm.com/api/client/v2.0/app/web-analytics-lsudy/service/web-analytics/incoming_webhook/webhook0?site=qori" as="script">
+<!-- head analytics-->
 </head>
 <body>
 <h1>Réserver un rendez-vous</h1>
